# pyCrossTalkeR

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.md  conf.py  index.md  index.rst  pyCrossTalkeR  pyCrossTalkeR.md
docs/source/notebooks/: pyCrossTalkeR.ipynb
docs/source/notebooks/.ipynb_checkpoints/: pyCrossTalkeR-checkpoint.ipynb
docs/source/notebooks/output/: LR_data.pkl
output/: LR_data_final.pkl
pycrosstalker/: __init__.py
pycrosstalker/plots/: plot.py
pycrosstalker/tools/: Comparative_condition.py  Single_Condition.py  __init__.py  generate_report.py  lrobject.py  utils.py
tutorials/: pyCrossTalkeR.ipynb
tutorials/output/: LR_data_final.pkl
tutorials/tests/: test_comparative.py  test_single.py
