[tool.poetry]
name = "pycrosstalker"
version = "0.1.0"
description = ""
authors = ["jsnagai <james.nagai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.24"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
networkx = "^3.3"
plotnine = "^0.13.6"
adjustText = "^1.2.0"
scikit-learn = "^1.5.1"
igraph = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


